[package]
name = "trait"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "parse_generics"
path = "src/parse_generics.rs"

[[bin]]
name = "parse_generics_return"
path = "src/parse_generics_return.rs"

[dependencies]
regex = "1.5"
