[package]
name = "trait"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "writer"
path = "src/writer.rs"

[[bin]]
name = "parse_generics"
path = "src/parse_generics.rs"

[[bin]]
name = "parse_generics_return"
path = "src/parse_generics_return.rs"

[[bin]]
name = "complex"
path = "src/complex.rs"

[[bin]]
name = "static_trait_distribution"
path = "src/static_trait_distribution.rs"

[[bin]]
name = "dynamic_trait_distribution"
path = "src/dynamic_trait_distribution.rs"

[dependencies]
regex = "1.5"
